feat: sst up post footer

--- a/src/customization/PostFooter.astro
+++ b/src/customization/PostFooter.astro
@@ -6,3 +6,23 @@ export type Props = {
   post: Post;
 };
 ---
+
+<section class="mt-12 px-6 py-6 bg-gray-300 rounded">
+  <p>
+    Eukaryaでは様々な職種で積極的にエンジニア採用を行っています！OSSにコントリビュートしていただける皆様からの応募をお待ちしております！
+  </p>
+  <p class="mt-4">
+    ➔ <a href="https://eukarya.io/ja/join" class="underline font-bold"
+      >Eukarya 採用ページ</a
+    >
+  </p>
+  <p class="mt-4">
+    Eukarya is hiring for various positions! We are looking forward to your
+    application from everyone who can contribute to OSS!
+  </p>
+  <p class="mt-4">
+    ➔ <a href="https://eukarya.io/join" class="underline font-bold"
+      >Eukarya Careers</a
+    >
+  </p>
+</section>
