feat: add eukarya info

--- a/src/customization/PostFooter.astro
+++ b/src/customization/PostFooter.astro
@@ -26,3 +26,36 @@ export type Props = {
     >
   </p>
 </section>
+<section class="mt-6 px-6 py-6 border-2 border-gray-300 rounded">
+  <p>
+    Eukaryaは、Re:Earthと呼ばれるWebGISのSaaSの開発運営・研究開発を行っています。Web上で3Dを含むGIS（地図アプリの公開、データ管理、データ変換等）に関するあらゆる業務を完結できることを目指しています。ソースコードはほとんどOSSとしてGitHubで公開されています。
+  </p>
+  <p class="mt-4">
+    ➔ <a href="https://eukarya.io/ja/" class="underline font-bold"
+      >Eukarya 公式ページ</a
+    >
+    / ➔ <a href="https://note.com/eukarya/" class="underline font-bold"
+      >Eukarya note</a
+    >
+    / ➔ <a href="https://github.com/reearth" class="underline font-bold"
+      >GitHub</a
+    >
+  </p>
+  <p class="mt-4">
+    Eukarya is developing and operating a WebGIS SaaS called Re:Earth. We aim to
+    complete all GIS-related tasks including 3D (such as publishing map
+    applications, data management, and data conversion) on the web. Most of the
+    source code is published on GitHub as OSS.
+  </p>
+  <p class="mt-4">
+    ➔ <a href="https://eukarya.io/" class="underline font-bold"
+      >Eukarya Official Page</a
+    >
+    / ➔ <a href="https://note.com/eukarya/" class="underline font-bold"
+      >Eukarya note (Japanese only)</a
+    >
+    / ➔ <a href="https://github.com/reearth" class="underline font-bold"
+      >GitHub</a
+    >
+  </p>
+</section>
