feat: update post footer

--- a/src/customization/PostFooter.astro
+++ b/src/customization/PostFooter.astro
@@ -32,11 +32,9 @@ export type Props = {
   </p>
   <p class="mt-4">
     ➔ <a href="https://eukarya.io/ja/" class="underline font-bold"
-      >Eukarya 公式ページ</a
+      >Eukarya 会社ウェブサイト</a
     >
-    / ➔ <a href="https://note.com/eukarya/" class="underline font-bold"
-      >Eukarya note</a
-    >
+    / ➔ <a href="https://note.com/eukarya/" class="underline font-bold">note</a>
     / ➔ <a href="https://github.com/reearth" class="underline font-bold"
       >GitHub</a
     >
@@ -52,7 +50,7 @@ export type Props = {
       >Eukarya Official Page</a
     >
     / ➔ <a href="https://note.com/eukarya/" class="underline font-bold"
-      >Eukarya note (Japanese only)</a
+      >note (Japanese only)</a
     >
     / ➔ <a href="https://github.com/reearth" class="underline font-bold"
       >GitHub</a
