feat: add medium link to footer

--- a/src/customization/PostFooter.astro
+++ b/src/customization/PostFooter.astro
@@ -32,7 +32,7 @@ export type Props = {
   </p>
   <p class="mt-4">
     ➔ <a href="https://eukarya.io/ja/" class="underline font-bold"
-      >Eukarya 会社ウェブサイト</a
+      >Eukarya Webサイト</a
     >
     / ➔ <a href="https://note.com/eukarya/" class="underline font-bold">note</a>
     / ➔ <a href="https://github.com/reearth" class="underline font-bold"
@@ -49,8 +49,8 @@ export type Props = {
     ➔ <a href="https://eukarya.io/" class="underline font-bold"
       >Eukarya Official Page</a
     >
-    / ➔ <a href="https://note.com/eukarya/" class="underline font-bold"
-      >note (Japanese only)</a
+    / ➔ <a href="https://medium.com/@eukarya" class="underline font-bold"
+      >Medium</a
     >
     / ➔ <a href="https://github.com/reearth" class="underline font-bold"
       >GitHub</a
