chore: update notiondown and complete mermaid setup

--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -56,6 +56,9 @@ const { database, post, html } = await getPost(slug);
     </article>
   </main>
 </Layout>
+<script>
+  import "../../scripts/mermaid";
+</script>
 <style
   define:vars={{
     titleFontFamily: config.index?.titleFontFamily || "inherit",
