fix: footer text

--- a/src/customization/PostFooter.astro
+++ b/src/customization/PostFooter.astro
@@ -9,7 +9,7 @@ export type Props = {
 
 <section class="mt-12 px-6 py-6 bg-gray-300 rounded">
   <p>
-    Eukaryaでは様々な職種で積極的にエンジニア採用を行っています！OSSにコントリビュートしていただける皆様からの応募をお待ちしております！
+    Eukaryaでは様々な職種で採用を行っています！OSSにコントリビュートしていただける皆様からの応募をお待ちしております！
   </p>
   <p class="mt-4">
     ➔ <a href="https://eukarya.io/ja/join" class="underline font-bold"
@@ -31,8 +31,11 @@ export type Props = {
     Eukaryaは、Re:Earthと呼ばれるWebGISのSaaSの開発運営・研究開発を行っています。Web上で3Dを含むGIS（地図アプリの公開、データ管理、データ変換等）に関するあらゆる業務を完結できることを目指しています。ソースコードはほとんどOSSとしてGitHubで公開されています。
   </p>
   <p class="mt-4">
-    ➔ <a href="https://eukarya.io/ja/" class="underline font-bold"
-      >Eukarya Webサイト</a
+    ➔ <a href="https://reearth.io/" class="underline font-bold"
+      >Re:Earth</a
+    >
+    / ➔ <a href="https://eukarya.io/ja/" class="underline font-bold"
+      >Eukarya</a
     >
     / ➔ <a href="https://note.com/eukarya/" class="underline font-bold">note</a>
     / ➔ <a href="https://github.com/reearth" class="underline font-bold"
@@ -46,8 +49,11 @@ export type Props = {
     source code is published on GitHub as OSS.
   </p>
   <p class="mt-4">
-    ➔ <a href="https://eukarya.io/" class="underline font-bold"
-      >Eukarya Official Page</a
+    ➔ <a href="https://reearth.io/" class="underline font-bold"
+      >Re:Earth</a
+    >
+    / ➔ <a href="https://eukarya.io/" class="underline font-bold"
+      >Eukarya</a
     >
     / ➔ <a href="https://medium.com/@eukarya" class="underline font-bold"
       >Medium</a
